--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo"> Mora <span>Freelancer</span> </h1>
+        <h1 class="titulo"> Moratronica <span>Freelancer</span> </h1>
     </header>
     
     <div class="nav-bg">
